--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ h1 {
   justify-content: space-between;
   font-family: sans-serif;
   border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
-  margin: 10px 0;
+  margin: 20px;
+  text-align: left;
 }
 
 .time {
